# telescope-jfind-fzf-benchmark

./: fuzzerize.py  readme.md
benchmark-vterm/: CMakeLists.txt
benchmark-vterm/include/: dterm.hpp  dterm_screen.hpp  dterm_screen_binder.hpp  dterm_screen_printer.hpp  interactive_process.hpp  util.hpp  vec2.hpp
benchmark-vterm/src/: dterm.cpp  dterm_screen.cpp  dterm_screen_binder.cpp  dterm_screen_printer.cpp  interactive_process.cpp  main.cpp  util.cpp
test1/: generate.py  jfind.sh  telescope.sh
test2/: fzf.sh  generate.py
test3/: fzf.sh  generate.py  jfind.sh  telescope.sh
